--- a/web-ui/index.html
+++ b/web-ui/index.html
@@ -16,11 +16,14 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link active">Home</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item login-link">
                     <a href="#" class="nav-link login-modal-open">Log In</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item login-link">
                     <a href="#" class="nav-link login-modal-open">Register</a>
+                </li>
+                <li class="nav-item logout-link">
+                    <a href="#" class="nav-link logout-action">Log Out</a>
                 </li>
             </ul>
         </div>
@@ -55,7 +58,7 @@
                             <input type="password" class="form-control" placeholder="Password" aria-label="Password">
                         </div>
                         <div class="form-group text-center">
-                            <input type="button" class="btn btn-primary" value="Log In">
+                            <input type="button" class="btn btn-primary" id="login-button" value="Log In">
                             <input type="button" class="btn btn-secondary" value="Register">
                         </div>
                     </form>
