--- a/web-ui/transactions.html
+++ b/web-ui/transactions.html
@@ -14,16 +14,45 @@
         <div class="nav-bar col-sm-1">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a href="#" class="nav-link active">Home</a>
+                    <a href="index.html" class="nav-link active">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Log Out</a>
+                    <a href="#" class="nav-link logout-action">Log Out</a>
                 </li>
             </ul>
         </div>
         <div class="content col-sm-8 container">
-            <h2>Account Details</h2>
+            <h2>Joint Account Details</h2>
+            <div class="row">
+                <div class="col-sm-4">
+                    Account Number:
+                </div>
+                <div class="col-sm-4">
+                    Account Type:
+                </div>
+                <div class="col-sm-4">
+                    Nickname:
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    Rewards:
+                </div>
+                <div class="col-sm-4">
+                    Balance:
+                </div>
+            </div>
+            <br />
             <h2>History</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>
+                            
+                        </th>
+                    </tr>
+                </thead>
+            </table>
         </div>
     </div>
 </body>
