--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,10 @@
                 <li class="nav-item login-link">
                     <a href="#" class="nav-link login-modal-open">Register</a>
                 </li>
-                <li class="nav-item logout-link">
+                <li class="nav-item logged-in">
+                    <a href="transactions.html" class="nav-link">Transactions</a>
+                </li>
+                <li class="nav-item logged-in">
                     <a href="#" class="nav-link logout-action">Log Out</a>
                 </li>
             </ul>
