--- a/frontend/summary.html
+++ b/frontend/summary.html
@@ -5,14 +5,20 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/dark.css">
+    <link rel="stylesheet" href="css/summary_graph.css">
+    <script type='text/javascript' src="js/summary_graph.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
+    <link href="http://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css" rel="stylesheet" type="text/css" />
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:300' rel='stylesheet' type='text/css'>
     <script src="js/bundle.js"></script>
     <meta charset="UTF-8">
-    <title>Transactions</title>
+    <title>Summary</title>
 </head>
 
 <body>
@@ -27,38 +33,8 @@
                 </li>
             </ul>
         </div>
-        <div class="content col-sm-8 container">
-            <h2>Joint Account Details</h2>
-            <div class="row">
-                <div class="col-sm-4">
-                    Account Number:
-                </div>
-                <div class="col-sm-4">
-                    Account Type:
-                </div>
-                <div class="col-sm-4">
-                    Nickname:
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4">
-                    Rewards:
-                </div>
-                <div class="col-sm-4">
-                    Balance:
-                </div>
-            </div>
-            <br />
-            <h2>History</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>
-
-                        </th>
-                    </tr>
-                </thead>
-            </table>
+        <div class="col-sm-9 container">
+            <div class="ct-chart ct-golden-section"></div>
         </div>
     </div>
 </body>
