--- a/frontend/transactions.html
+++ b/frontend/transactions.html
@@ -54,6 +54,33 @@
                 </div>
             </div>
             <br />
+            <h2>Members</h2>
+            <ul id="members-list">
+
+            </ul>
+            <br />
+            <h2>Transfer Funds</h2>
+            <form>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Amount: $</span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="Amount">
+                    <div class="input-group-append">
+                        <span class="input-group-text">.00</span>
+                    </div>
+                </div>
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">Recipient Account: </span>
+                    </div>
+                    <input type="text" class="form-control" aria-label="Account">
+                </div>
+                <div class="form-group text-center">
+                    <input type="button" class="btn btn-primary" id="submit-transactions" value="Transfer from Joint Account">
+                </div>
+            </form>
+            <br />
             <h2>History</h2>
         </div>
     </div>
