--- a/frontend/transactions.html
+++ b/frontend/transactions.html
@@ -2,89 +2,100 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/light.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
     <script src="js/bundle.js"></script>
     <meta charset="UTF-8">
-    <title>Transactions</title>
+    <title>SquadShare: Transactions</title>
 </head>
 
-<body>
-    <div class="row">
-        <div class="nav-bar col-sm-1">
-            <ul class="nav flex-column">
-                <li class="nav-item">
-                    <a href="#" class="nav-link active">Home</a>
-                </li>
-                <li class="nav-item login-link">
-                    <a href="#" class="nav-link login-modal-open">Log In</a>
-                </li>
-                <li class="nav-item login-link">
-                    <a href="#" class="nav-link login-modal-open">Register</a>
-                </li>
-                <li class="nav-item logged-in">
-                    <a href="transactions.html" class="nav-link">Transactions</a>
-                </li>
-                <li class="nav-item logged-in">
-                    <a href="#" class="nav-link logout-action">Log Out</a>
-                </li>
-            </ul>
-        </div>
-        <div class="content col-sm-8 container">
-            <h2>Joint Account Details</h2>
-            <div class="row">
-                <div class="col-sm-6" id="acc-num">
-                    Account Number:
-                </div>
-                <div class="col-sm-6" id="acc-type">
-                    Account Type:
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6" id="acc-nick">
-                    Nickname:
-                </div>
-                <div class="col-sm-6" id="acc-rew">
-                    Rewards:
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-6" id="acc-bal">
-                    Balance:
-                </div>
-            </div>
-            <br />
-            <h2>Members</h2>
-            <ul id="members-list">
+<body class="no-sidebar is-preload">
+    <div id="page-wrapper">
 
-            </ul>
-            <br />
-            <h2>Transfer Funds</h2>
-            <form>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Amount: $</span>
+        <!-- Header -->
+        <section id="header">
+
+            <!-- Logo -->
+            <h1><a href="index.html">SquadShare</a></h1>
+            <h2>Free, Secure Way To Share Expenses</h2>
+
+            <!-- Nav -->
+            <nav id="nav">
+                <ul>
+                    <li class="nav-item current"><a href="index.html" class="nav-link active">Home</a></li>
+                    <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Log In</a></li>
+                    <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Register</a></li>
+                    <li class="nav-item logged-in"><a href="#" class="nav-link">Transactions</a></li>
+                    <li class="nav-item logged-in"><a href="#" class="nav-link logout-action">Log Out</a></li>
+                </ul>
+            </nav>
+        </section>
+
+        <!-- Main -->
+        <section id="main">
+            <div class="container">
+                <div class="col-sm-8 container">
+                    <h2>Joint Account Details</h2>
+                    <div class="row">
+                        <div class="col-sm-6" id="acc-num">
+                            Account Number:
+                        </div>
+                        <div class="col-sm-6" id="acc-type">
+                            Account Type:
+                        </div>
                     </div>
-                    <input type="text" class="form-control" aria-label="Amount">
-                    <div class="input-group-append">
-                        <span class="input-group-text">.00</span>
+                    <div class="row">
+                        <div class="col-sm-6" id="acc-nick">
+                            Nickname:
+                        </div>
+                        <div class="col-sm-6" id="acc-rew">
+                            Rewards:
+                        </div>
                     </div>
-                </div>
-                <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">Recipient Account: </span>
+                    <div class="row">
+                        <div class="col-sm-6" id="acc-bal">
+                            Balance:
+                        </div>
                     </div>
-                    <input type="text" class="form-control" aria-label="Account">
+                    <br />
+                    <h2>Members</h2>
+                    <ul id="members-list">
+
+                    </ul>
+                    <br />
+                    <h2>Transfer Funds</h2>
+                    <form>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">Amount: $</span>
+                            </div>
+                            <input type="text" class="form-control" aria-label="Amount">
+                            <div class="input-group-append">
+                                <span class="input-group-text">.00</span>
+                            </div>
+                        </div>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text">Recipient Account: </span>
+                            </div>
+                            <input type="text" class="form-control" aria-label="Account">
+                        </div>
+                        <div class="form-group text-center">
+                            <input type="button" class="btn btn-primary" id="submit-transactions"
+                                value="Transfer from Joint Account">
+                        </div>
+                    </form>
+                    <br />
+                    <h2>History</h2>
                 </div>
-                <div class="form-group text-center">
-                    <input type="button" class="btn btn-primary" id="submit-transactions" value="Transfer from Joint Account">
-                </div>
-            </form>
-            <br />
-            <h2>History</h2>
-        </div>
+        </section>
     </div>
 </body>
 
