--- a/frontend/transactions.html
+++ b/frontend/transactions.html
@@ -29,10 +29,11 @@
             <!-- Nav -->
             <nav id="nav">
                 <ul>
-                    <li class="nav-item current"><a href="index.html" class="nav-link active">Home</a></li>
+                    <li class="nav-item current"><a href="index.html" class="nav-link">Home</a></li>
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Log In</a></li>
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Register</a></li>
-                    <li class="nav-item logged-in"><a href="#" class="nav-link">Transactions</a></li>
+                    <li class="nav-item logged-in"><a href="#" class="nav-link active">Transactions</a></li>
+                    <li class="nav-item logged-in"><a href="profile.html" class="nav-link">Profile</a></li>
                     <li class="nav-item logged-in"><a href="#" class="nav-link logout-action">Log Out</a></li>
                 </ul>
             </nav>
@@ -47,19 +48,6 @@
                         <div class="col-sm-6" id="acc-num">
                             Account Number:
                         </div>
-                        <div class="col-sm-6" id="acc-type">
-                            Account Type:
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-sm-6" id="acc-nick">
-                            Nickname:
-                        </div>
-                        <div class="col-sm-6" id="acc-rew">
-                            Rewards:
-                        </div>
-                    </div>
-                    <div class="row">
                         <div class="col-sm-6" id="acc-bal">
                             Balance:
                         </div>
@@ -95,6 +83,7 @@
                     <br />
                     <h2>History</h2>
                 </div>
+            </div>
         </section>
     </div>
 </body>
