--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Username" aria-label="Username">
+                            <input type="text" class="form-control" placeholder="Username" id="username" aria-label="Username">
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control" placeholder="Password" aria-label="Password">
