--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -29,11 +29,12 @@
         <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li class="nav-item current"><a href="index.html" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
                 <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Log In</a></li>
                 <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Register</a></li>
                 <li class="nav-item logged-in"><a href="transactions.html" class="nav-link">Transactions</a></li>
-                <li class="nav-item logged-in"><a href="#" class="nav-link active">Profile</a></li>
+                <li class="nav-item logged-in current"><a href="#" class="nav-link active">Profile</a></li>
+                <li class="nav-item logged-in"><a href="summary.html" class="nav-link">Summary</a></li>
                 <li class="nav-item logged-in"><a href="#" class="nav-link logout-action">Log Out</a></li>
             </ul>
         </nav>
