--- a/frontend/index.html
+++ b/frontend/index.html
@@ -35,6 +35,7 @@
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Log In</a></li>
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Register</a></li>
                     <li class="nav-item logged-in"><a href="transactions.html" class="nav-link">Transactions</a></li>
+                    <li class="nav-item logged-in"><a href="profile.html" class="nav-link">Profile</a></li>
                     <li class="nav-item logged-in"><a href="summary.html" class="nav-link">Summary</a></li>
                     <li class="nav-item logged-in"><a href="#" class="nav-link logout-action">Log Out</a></li>
                 </ul>
