--- a/frontend/summary.html
+++ b/frontend/summary.html
@@ -39,7 +39,8 @@
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Log In</a></li>
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Register</a></li>
                     <li class="nav-item logged-in"><a href="transactions.html" class="nav-link">Transactions</a></li>
-                    <li class="nav-item logged-in current"><a href="#" class="nav-link">Summary</a></li>
+                    <li class="nav-item logged-in"><a href="profile.html" class="nav-link">Profile</a></li>
+                    <li class="nav-item logged-in current"><a href="#" class="nav-link active">Summary</a></li>
                     <li class="nav-item logged-in"><a href="#" class="nav-link logout-action">Log Out</a></li>
                 </ul>
             </nav>
