--- a/frontend/about-us.html
+++ b/frontend/about-us.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
     <script src="js/bundle.js"></script>
     <meta charset="UTF-8">
-    <title>SquadShare - Capital One's Roommate Banking</title>
+    <title>SquadShare - About Us</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 </head>
 
@@ -31,63 +31,60 @@
             <!-- Nav -->
             <nav id="nav">
                 <ul>
-                    <li class="nav-item current"><a href="#" class="nav-link active">Home</a></li>
+                    <li class="nav-item"><a href="index.html" class="nav-link active">Home</a></li>
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Log In</a></li>
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Register</a></li>
-                    <li class="nav-item"><a href="about-us.html" class="nav-link active">About Us</a></li>
                     <li class="nav-item logged-in"><a href="transactions.html" class="nav-link">Transactions</a></li>
                     <li class="nav-item logged-in"><a href="summary.html" class="nav-link">Summary</a></li>
+                    <li class="nav-item current"><a href="#" class="nav-link active">About Us</a></li>
                     <li class="nav-item logged-in"><a href="#" class="nav-link logout-action">Log Out</a></li>
                 </ul>
             </nav>
 
-            <!-- Banner -->
-            <section id="banner">
-                <header>
-                    <h2>Welcome to SquadShare!</h2>
-                    <p>Your Must-have for Roommate, Couple, and All Expense Sharing</p>
-                </header>
-            </section>
+            <!-- VT Hack Logo -->
+            <br />
+            <img src="images/VTHack-logo" alt="VT Hack VI" width="30%" height="30%">
 
-            <!-- Intro -->
-            <section id="intro" class="container">
-                <div class="row">
-                    <div class="col-4 col-12-medium">
-                        <section class="first">
-                            <i class="icon featured fa-cog"></i>
-                            <header>
-                                <h2>EASY & POWERFUL</h2>
-                            </header>
-                            <p>Easy to learn. Powerful to use.</p>
-                        </section>
-                    </div>
-                    <div class="col-4 col-12-medium">
-                        <section class="middle">
-                            <i class="icon featured alt fa-flash"></i>
-                            <header>
-                                <h2>SECURE BANKING</h2>
-                            </header>
-                            <p>Monitored by reputable bank.</p>
-                        </section>
-                    </div>
-                    <div class="col-4 col-12-medium">
-                        <section class="last">
-                            <i class="icon featured alt2 fa-star"></i>
-                            <header>
-                                <h2>FAST TRANSACTIONS</h2>
-                            </header>
-                            <p>Supported by the Capital One Banking API.</p>
-                        </section>
-                    </div>
-                </div>
-                <footer>
-                    <ul class="actions">
-                        <li><a href="about-us.html" class="button large">Why SquadShare?</a></li>
-                    </ul>
-                    <p>Original Design: <a href="http://html5up.net">HTML5 UP</a></p>
-                </footer>
-            </section>
+            <h2> Why SquadShare? </h2>
+            <small>SquadShare is a unique application that resolves the real problems of shared expenses.</small>
+            <br />
+            <small>Your infomation is secure! Supported and monitored by Capital One, one of the largest bank in
+                US!</small>
+            <br />
+            <small>Everyone is risk free! No more one roommate pays for everything, a virtual joint account takes care
+                of you all!</small>
+            <br />
+            <br />
+
+            <h2> Who are we? </h2>
+            <small>Hello! Our names are Nick Clark, Zachary Geier, Neal Mangaokar, and Jiayi Wang.</small>
+            <br />
+            <small>Four passionate Virginia Tech Computer Science students.</small>
+            <br />
+            <small>As juniors and seniors, we love and appreciate the VT community.</small>
+            <br />
+            <small>We want to use the opportunity of VTHack to build an application that truly benefits
+                everyone.</small>
+            <br />
+            <small>That's how SquadShare was created!</small>
+            <br />
+            <small>Our take on a much needed financial app, espically among college students.</small>
+            <br />
+            <br />
+
+            <h2> Contact Us! </h2>
+            <small>If you have any questions or just comments in general, feel free to contact us!</small>
+            <br />
+            <small>Nick Clark: ntc0531@vt.edu</small>
+            <br />
+            <small>Zachary Geier: zdgeier@vt.edu</small>
+            <br />
+            <small>Neal Mangaokar: neal1998@vt.edu</small>
+            <br />
+            <small>Jiayi Wang: jiayiw6@vt.edu</small>
+            <br />
         </section>
+
     </div>
 
     <div class="modal fade" id="login-modal" role="modal">
