--- a/frontend/summary.html
+++ b/frontend/summary.html
@@ -40,6 +40,7 @@
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Register</a></li>
                     <li class="nav-item logged-in"><a href="transactions.html" class="nav-link">Transactions</a></li>
                     <li class="nav-item logged-in current"><a href="#" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="about-us.html" class="nav-link active">About Us</a></li>
                     <li class="nav-item logged-in"><a href="#" class="nav-link logout-action">Log Out</a></li>
                 </ul>
             </nav>
