--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -35,6 +35,7 @@
                 <li class="nav-item logged-in"><a href="transactions.html" class="nav-link">Transactions</a></li>
                 <li class="nav-item logged-in current"><a href="#" class="nav-link active">Profile</a></li>
                 <li class="nav-item logged-in"><a href="summary.html" class="nav-link">Summary</a></li>
+                <li class="nav-item"><a href="about-us.html" class="nav-link active">About Us</a></li>
                 <li class="nav-item logged-in"><a href="#" class="nav-link logout-action">Log Out</a></li>
             </ul>
         </nav>
