about us + home

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -34,7 +34,6 @@
                     <li class="nav-item current"><a href="#" class="nav-link active">Home</a></li>
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Log In</a></li>
                     <li class="nav-item login-link"><a href="#" class="nav-link login-modal-open">Register</a></li>
-                    <li class="nav-item"><a href="about-us.html" class="nav-link active">About Us</a></li>
                     <li class="nav-item logged-in"><a href="transactions.html" class="nav-link">Transactions</a></li>
                     <li class="nav-item logged-in"><a href="profile.html" class="nav-link">Profile</a></li>
                     <li class="nav-item logged-in"><a href="summary.html" class="nav-link">Summary</a></li>
@@ -81,14 +80,60 @@
                         </section>
                     </div>
                 </div>
-                <footer>
-                    <ul class="actions">
-                        <li><a href="about-us.html" class="button large">Why SquadShare?</a></li>
-                    </ul>
-                    <p>Original Design: <a href="http://html5up.net">HTML5 UP</a></p>
-                </footer>
             </section>
         </section>
+
+        <div id="page-wrapper">
+            <section id="header">
+                <!-- VT Hack Logo -->
+                <br />
+                <img src="images/VTHack-logo" alt="VT Hack VI" width="30%" height="30%">
+
+                <h2> Why SquadShare? </h2>
+                <small>SquadShare is a unique application that resolves the real problems of shared expenses.</small>
+                <br />
+                <small>Your infomation is secure! Supported and monitored by Capital One, one of the largest bank in
+                    US!</small>
+                <br />
+                <small>Everyone is risk free! No more one roommate pays for everything, a virtual joint account takes
+                    care
+                    of you all!</small>
+                <br />
+                <br />
+
+                <h2> Who are we? </h2>
+                <small>Hello! Our names are Nick Clark, Zachary Geier, Neal Mangaokar, and Jiayi Wang.</small>
+                <br />
+                <small>Four passionate Virginia Tech Computer Science students.</small>
+                <br />
+                <small>As juniors and seniors, we love and appreciate the VT community.</small>
+                <br />
+                <small>We want to use the opportunity of VTHack to build an application that truly benefits
+                    everyone.</small>
+                <br />
+                <small>That's how SquadShare was created!</small>
+                <br />
+                <small>Our take on a much needed financial app, espically among college students.</small>
+                <br />
+                <br />
+
+                <h2> Contact Us! </h2>
+                <small>If you have any questions or just comments in general, feel free to contact us!</small>
+                <br />
+                <small>Nick Clark: ntc0531@vt.edu</small>
+                <br />
+                <small>Zachary Geier: zdgeier@vt.edu</small>
+                <br />
+                <small>Neal Mangaokar: neal1998@vt.edu</small>
+                <br />
+                <small>Jiayi Wang: jiayiw6@vt.edu</small>
+                <br />
+
+                <br />
+                <br />
+                <p>Original Design: <a href="http://html5up.net">HTML5 UP</a></p>
+            </section>
+        </div>
     </div>
 
     <div class="modal fade" id="login-modal" role="modal">
@@ -97,7 +142,8 @@
                 <div class="modal-body">
                     <form>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Username" id="username" aria-label="Username">
+                            <input type="text" class="form-control" placeholder="Username" id="username"
+                                aria-label="Username">
                         </div>
                         <div class="form-group">
                             <input type="password" class="form-control" placeholder="Password" aria-label="Password">
