--- a/frontend/transactions.html
+++ b/frontend/transactions.html
@@ -55,7 +55,8 @@
                     </div>
                     <br />
                     <h2>Members</h2>
-                    <ul id="members-list">
+                    <ul id="members-list1"></ul>
+                    <ul id="members-list2"></ul>
 
                     </ul>
                     <br />
